--- a/webfun/06-flexiblecolumns/style.css
+++ b/webfun/06-flexiblecolumns/style.css
@@ -6,10 +6,16 @@ body{
 }
 .col{
     flex: 1;
-    margin-right: 10px;
-    background-color: #ED89D9;
+    background-color: #A787C0;
     padding: 20px;
+    margin: 10px 10px 10px 0;
 }
-.col:last-child{
+.col-2:last-child,.col:last-child{
     margin-right: 0;
+}
+.col-2{
+    flex: 2;
+    background-color: #A787C0;
+    padding: 20px;
+    margin: 10px 10px 10px 0;
 }
