--- a/webfun/06-flexiblecolumns/style.css
+++ b/webfun/06-flexiblecolumns/style.css
@@ -6,16 +6,20 @@ body{
 }
 .col{
     flex: 1;
-    background-color: #A787C0;
-    padding: 20px;
-    margin: 10px 10px 10px 0;
-}
-.col-2:last-child,.col:last-child{
-    margin-right: 0;
 }
 .col-2{
     flex: 2;
+}
+.col-3 {
+    flex: 3;
+}
+.col, .col-2,.col-3 {
     background-color: #A787C0;
     padding: 20px;
-    margin: 10px 10px 10px 0;
+    margin: 5px 10px 5px 0;
+}
+.col-3:last-child,
+.col-2:last-child,
+.col:last-child {
+    margin-right: 0;
 }
