did some visual edits

--- a/webfun/08-layout-page/style.css
+++ b/webfun/08-layout-page/style.css
@@ -130,12 +130,12 @@ footer {
 }
 
 .list-item {
-    padding: 20px;
+    padding: 5px 10px 5px 10px;
 }
 
 .item {
     display: flex;
-    padding: 10px 0;
+    padding: 2px 0;
     align-items: center;
 }
 
